[FIX] Motorcycle product model and form view

--- a/motorcycle_registry/views/product_template_view_inherit.xml
+++ b/motorcycle_registry/views/product_template_view_inherit.xml
@@ -8,13 +8,27 @@
 
 
             <field name="arch" type="xml">
-                <xpath expr="//sheet//notebook" position="inside" attrs="{'invisible':[{'detailed_type', '!=', 'motorcycle'}]}">
-                    <page name="motorcycle" string="Motorcycle Details">
+                <xpath expr="//sheet//notebook" position="inside">
+                    <page name="motorcycle" string="Motorcycle Details" attrs="{'invisible':[('detailed_type','!=', 'motorcycle')]}">
                         <group>
-                            <separator string="product.group_product_motorcycle">
-                                <field name="make" />
-                                <field name="model" />
-                            </separator>
+                            <group>
+                                <separator string="Motorcycle Information"/>
+                                <field name="make"/>
+                                <field name="model"/>
+                                <field name="curb_weight"/>
+                            </group>
+                            <group>
+                                <separator string="Motor Information"/>
+                                <field name="horsepower"/>
+                                <field name="top_speed"/>
+                                <field name="torque"/>
+                            </group>
+                        </group>
+                        <group>
+                            <separator string="Motor Information"/>
+                            <field name="battery_capacity"/>
+                            <field name="charge_time"/>
+                            <field name="range"/>
                         </group>
                     </page>
                 </xpath>
