[ADD] motorcycle_registry: advanced orm validation

--- a/motorcycle_registry/views/motorcycle_registry_views.xml
+++ b/motorcycle_registry/views/motorcycle_registry_views.xml
@@ -25,6 +25,7 @@
                     </group>
                     <notebook>
                         <page string="Related Documents">
+                            <label for="certificate_title" string="Certificate "/>
                             <field name="certificate_title"/>
                         </page>
                     </notebook>
